--- a/.env.example
+++ b/.env.example
@@ -39,4 +39,9 @@ RATE_LIMIT_PER_MINUTE=60
 
 # Pagination
 DEFAULT_PAGE_SIZE=20
-MAX_PAGE_SIZE=100 
+MAX_PAGE_SIZE=100
+
+# Email Settings
+FROM_EMAIL=no-reply@example.com
+RESEND_API_KEY=
+FRONTEND_BASE_URL=http://localhost:3000 
