--- a/alembic.ini
+++ b/alembic.ini
@@ -5,6 +5,7 @@
 # this is typically a path given in POSIX (e.g. forward slashes)
 # format, relative to the token %(here)s which refers to the location of this
 # ini file
+interpolate = false
 script_location = alembic
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
@@ -68,7 +69,7 @@ version_path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql+psycopg://postgres:postgres@127.0.0.1:5432/fastapi-database
 
 
 [post_write_hooks]
