--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,6 @@ dependencies = [
     "httpx>=0.25.2",
     "pytest-asyncio>=0.21.1",
     "aiosqlite>=0.19.0",
+    "email-validator>=2.2.0",
 ]
 
