--- a/alembic.ini
+++ b/alembic.ini
@@ -12,7 +12,7 @@ script_location = alembic
 # Uncomment the line below if you want the files to be prepended with date and time
 # see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
 # for all available tokens
-# file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
+file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.  for multiple paths, the path separator
@@ -25,15 +25,14 @@ prepend_sys_path = .
 # If specified, requires the python-dateutil library that can be
 # installed by adding `alembic[tz]` to the pip requirements
 # string value is passed to dateutil.tz.gettz()
-# leave blank for localtime
-# timezone =
+timezone = UTC
 
 # max length of characters to apply to the "slug" field
 # truncate_slug_length = 40
 
 # set to 'true' to run the environment during
 # the 'revision' command, regardless of autogenerate
-# revision_environment = false
+revision_environment = true
 
 # set to 'true' to allow .pyc and .pyo files without
 # a source .py file to be detected as revisions in the
@@ -64,12 +63,12 @@ version_path_separator = os
 
 # the output encoding used when revision files
 # are written from script.py.mako
-# output_encoding = utf-8
+output_encoding = utf-8
 
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+psycopg://postgres:postgres@127.0.0.1:5432/fastapi-database
+# sqlalchemy.url =
 
 
 [post_write_hooks]
@@ -77,17 +76,16 @@ sqlalchemy.url = postgresql+psycopg://postgres:postgres@127.0.0.1:5432/fastapi-d
 # on newly generated revision scripts.  See the documentation for further
 # detail and examples
 
-# format using "black" - use the console_scripts runner, against the "black" entrypoint
-# hooks = black
-# black.type = console_scripts
-# black.entrypoint = black
-# black.options = -l 79 REVISION_SCRIPT_FILENAME
+hooks = black, ruff
+# Black auto-formatting
+black.type = console_scripts
+black.entrypoint = black
+black.options = -l 88 REVISION_SCRIPT_FILENAME
 
-# lint with attempts to fix using "ruff" - use the exec runner, execute a binary
-# hooks = ruff
-# ruff.type = exec
-# ruff.executable = %(here)s/.venv/bin/ruff
-# ruff.options = check --fix REVISION_SCRIPT_FILENAME
+# Ruff lint-and-fix
+ruff.type = exec
+ruff.executable = ruff
+ruff.options = check --fix REVISION_SCRIPT_FILENAME
 
 # Logging configuration.  This is also consumed by the user-maintained
 # env.py script only.
