--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,5 +22,6 @@ dependencies = [
     "pytest-asyncio>=0.21.1",
     "aiosqlite>=0.19.0",
     "email-validator>=2.2.0",
+    "syncpg>=1.1.3",
 ]
 
