social OAuth, Redis patch

--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,8 @@ DESCRIPTION=A robust, scalable, and secure FastAPI backend
 BACKEND_CORS_ORIGINS=http://localhost:3000,http://localhost:3001
 
 # Database Settings
-DATABASE_URL=sqlite:///./app.db
-# For PostgreSQL: postgresql://username:password@localhost/dbname
-# DATABASE_URL_ASYNC=postgresql+asyncpg://username:password@localhost/dbname
+DATABASE_URL=postgresql+psycopg://postgres:postgres@localhost:5432/aixiate_db
+# DATABASE_URL_ASYNC=postgresql+asyncpg://postgres:postgres@localhost:5432/aixiate_db
 
 # Redis Settings
 REDIS_URL=redis://localhost:6379
