--- a/alembic.ini
+++ b/alembic.ini
@@ -70,6 +70,8 @@ output_encoding = utf-8
 # file.
 # sqlalchemy.url =
 
+sqlalchemy.url = postgresql+psycopg://postgres:admin2025@localhost:5432/aixiate_db
+
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
